--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "form-data": "^4.0.0",
     "mkdirp": "^3.0.1",
     "mongoose": "^8.6.0",
+    "ollama": "^0.5.9",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "yaml": "^2.5.1"
