--- a/package.json
+++ b/package.json
@@ -1,43 +1,62 @@
 {
-  "name": "botsocean-app",
-  "version": "0.1.0",
+  "name": "@aptos-labs/wallet-adapter-nextjs-example",
+  "version": "3.4.14",
   "private": true,
+  "license": "Apache-2.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write './**/*.{ts,tsx,js,jsx,json,md,html,css}'"
   },
   "dependencies": {
-    "@aptos-labs/ts-sdk": "^1.26.0",
-    "@aptos-labs/wallet-adapter-ant-design": "^3.0.6",
-    "@aptos-labs/wallet-adapter-react": "^3.5.6",
-    "@radix-ui/react-dialog": "^1.1.2",
+    "@aptos-labs/ts-sdk": "^1.27.1",
+    "@aptos-labs/wallet-adapter-ant-design": "^3.0.14",
+    "@aptos-labs/wallet-adapter-core": "^4.17.0",
+    "@aptos-labs/wallet-adapter-react": "^3.7.0",
+    "@aptos-labs/wallet-standard": "^0.1.0",
+    "@bitget-wallet/aptos-wallet-adapter": "^0.1.0",
+    "@martianwallet/aptos-wallet-adapter": "^0.0.5",
+    "@msafe/aptos-wallet-adapter": "^1.0.11",
+    "@okwallet/aptos-wallet-adapter": "^0.0.3",
+    "@pontem/wallet-adapter-plugin": "^0.2.1",
+    "@radix-ui/react-collapsible": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@trustwallet/aptos-wallet-adapter": "^0.1.6",
+    "antd": "^5.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "ethers": "^5.7.2",
+    "fewcha-plugin-wallet-adapter": "^0.1.3",
     "framer-motion": "^11.11.1",
-    "lucide-react": "^0.447.0",
-    "next": "14.2.14",
-    "petra-plugin-wallet-adapter": "^0.4.5",
-    "react": "^18",
-    "react-dom": "^18",
-    "shadcn": "^1.0.0",
-    "tailwind-merge": "^2.5.3",
+    "lucide-react": "^0.383.0",
+    "next": "14.2.3",
+    "next-themes": "^0.3.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@telegram-apps/bridge": "^1.2.1",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
-    "eslint-config-next": "14.2.14",
-    "postcss": "^8",
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8.4.38",
+    "prettier": "^3.3.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.4.5"
   }
 }
