--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@aptos-labs/wallet-adapter-nextjs-example",
+  "name": "botsocean-app",
   "version": "3.4.14",
   "private": true,
   "license": "Apache-2.0",
