--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@aptos-labs/wallet-adapter-ant-design": "^3.0.14",
     "@aptos-labs/wallet-adapter-core": "^4.17.0",
     "@aptos-labs/wallet-adapter-react": "^3.7.0",
-    "@aptos-labs/wallet-standard": "^0.1.0",
+    "@aptos-labs/wallet-standard": "^0.2.0",
     "@bitget-wallet/aptos-wallet-adapter": "^0.1.0",
     "@martianwallet/aptos-wallet-adapter": "^0.0.5",
     "@msafe/aptos-wallet-adapter": "^1.0.11",
@@ -36,14 +36,12 @@
     "antd": "^5.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "ethers": "^5.7.2",
+    "ethers": "^6.13.3",
     "fewcha-plugin-wallet-adapter": "^0.1.3",
     "framer-motion": "^11.11.1",
     "lucide-react": "^0.383.0",
-    "next": "14.2.3",
+    "next": "^14.2.14",
     "next-themes": "^0.3.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -51,12 +49,13 @@
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.19",
+    "@types/tailwindcss": "^3.1.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.1",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.4.5"
   }
 }
