--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@aptos-labs/wallet-standard": "^0.2.0",
     "@bitget-wallet/aptos-wallet-adapter": "^0.1.0",
     "@martianwallet/aptos-wallet-adapter": "^0.0.5",
+    "@mizuwallet-sdk/core": "^1.3.2",
     "@msafe/aptos-wallet-adapter": "^1.0.11",
     "@okwallet/aptos-wallet-adapter": "^0.0.3",
     "@pontem/wallet-adapter-plugin": "^0.2.1",
@@ -32,6 +33,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
+    "@telegram-apps/bridge": "^1.2.1",
     "@trustwallet/aptos-wallet-adapter": "^0.1.6",
     "antd": "^5.1.2",
     "class-variance-authority": "^0.7.0",
@@ -39,15 +41,19 @@
     "ethers": "^6.13.3",
     "fewcha-plugin-wallet-adapter": "^0.1.3",
     "framer-motion": "^11.11.1",
+    "graphql": "^16.9.0",
+    "graphql-request": "^7.1.0",
     "lucide-react": "^0.383.0",
     "next": "^14.2.14",
     "next-themes": "^0.3.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18.3.3",
+    "@types/node": "^22.7.5",
+    "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@types/tailwindcss": "^3.1.0",
     "autoprefixer": "^10.4.20",
@@ -56,6 +62,6 @@
     "postcss": "^8.4.47",
     "prettier": "^3.3.1",
     "tailwindcss": "^3.4.13",
-    "typescript": "^5.4.5"
+    "typescript": "^5.6.2"
   }
 }
