--- a/config.example.yml
+++ b/config.example.yml
@@ -1,8 +1,9 @@
 app:
   port: 3001
-  db_connection: "mongodb://localhost:27017/money_printer"
-  quic:
+  hub:
     privkey_path: keys/key.pem
     pubkey_path: keys/pubkey.pem
     cert_path: keys/cert.pem
     rootca_cert_path: keys/rootCA.crt
+    host: 0.0.0.0
+    port: 4433
