--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,10 @@ services:
     container_name: botsocean
     restart: always
     ports:
-      - "3000:3000" # Maps the host port 3000 to the container port 3000
+      - "3000:3000"
+      - "4433:4433"
     depends_on:
-      - mongodb # Ensure the MongoDB service starts before this service
+      - mongodb
     volumes:
       - ./config.yml:/usr/src/app/config.yml
 
