--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,11 @@
 services:
+  redis:
+    image: redis
+    container_name: redis
+    command: >
+      --requirepass ${REDIS_PASSWORD}
+    volumes:
+      - ../redis-data:/data
   botsocean:
     build: .
     image: yadsendewlung/botsocean:latest
@@ -8,8 +15,8 @@ services:
       - "3000:3000"
       - "4433:4433/tcp"
       - "4433:4433/udp"
-    # depends_on:
-      # - mongodb
+    depends_on:
+      - redis
     volumes:
       - ./config.yml:/usr/src/app/config.yml
       - ./keys:/usr/src/app/keys
