--- a/package.json
+++ b/package.json
@@ -24,17 +24,22 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^10.0.10",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@peculiar/webcrypto": "^1.5.0",
     "@peculiar/x509": "^1.12.3",
     "@quicknode/sdk": "^2.3.0",
     "axios": "^1.7.6",
-    "ethers": "^6.13.2",
+    "ethers": "^6.13.3",
     "form-data": "^4.0.0",
+    "ioredis": "^5.4.1",
     "mkdirp": "^3.0.1",
     "mongoose": "^8.6.0",
     "ollama": "^0.5.9",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "yaml": "^2.5.1"
