--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,10 @@ services:
   redis:
     image: redis
     container_name: redis
+    ports:
+      - "6379:6379"
     volumes:
-      - ../redis-data:/data
+      - ./.redis-data:/data
   botsocean:
     build: .
     image: yadsendewlung/botsocean:latest
