--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aptos-labs/ts-sdk": "^1.29.1",
     "@matrixai/quic": "^1.3.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
