--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "money-printer",
+  "name": "botocean_monorepo",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -11,13 +11,20 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/apps/money-printer/main",
+    "start:prod": "node dist/apps/hub/main",
+    "start_axenode": "nest start axenode",
+    "start_axenode:dev": "nest start axenode --watch",
+    "start_axenode:debug": "nest start axenode --debug --watch",
+    "start_axenode:prod": "node dist/apps/axenode/main",
+    "start_msg:dev": "nest start message_bundle --watch",
+    "start_msg:debug": "nest start message_bundle --debug --watch",
+    "start_msg:prod": "node dist/apps/message_bundle/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/money-printer/test/jest-e2e.json"
+    "test:e2e": "jest --config ./apps/hub/test/jest-e2e.json"
   },
   "dependencies": {
     "@aptos-labs/ts-sdk": "^1.29.1",
@@ -38,12 +45,14 @@
     "ethers": "^6.13.3",
     "form-data": "^4.0.0",
     "ioredis": "^5.4.1",
+    "ipfs-http-client": "^50.1.2",
     "mkdirp": "^3.0.1",
     "mongoose": "^8.6.0",
     "ollama": "^0.5.9",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "toml": "^3.0.0",
     "yaml": "^2.5.1"
   },
   "devDependencies": {
