--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@aptos-labs/ts-sdk": "^1.29.1",
     "@kubernetes/client-node": "^0.22.1",
     "@matrixai/quic": "^1.3.0",
+    "@multiformats/multiaddr": "^12.3.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
@@ -45,7 +46,7 @@
     "ethers": "^6.13.3",
     "form-data": "^4.0.0",
     "ioredis": "^5.4.1",
-    "ipfs-http-client": "^50.1.2",
+    "kubo-rpc-client": "^5.0.1",
     "mkdirp": "^3.0.1",
     "mongoose": "^8.6.0",
     "ollama": "^0.5.9",
