--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "ethers": "^6.13.3",
     "form-data": "^4.0.0",
     "ioredis": "^5.4.1",
-    "kubo-rpc-client": "^5.0.1",
+    "ipfs-http-client": "^56.0.3",
     "mkdirp": "^3.0.1",
     "mongoose": "^8.6.0",
     "ollama": "^0.5.9",
