--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/apps/hub/main",
-    "start_axenode": "nest start axenode",
-    "start_axenode:dev": "nest start axenode --watch",
-    "start_axenode:debug": "nest start axenode --debug --watch",
-    "start_axenode:prod": "node dist/apps/axenode/main",
+    "start_axenode": "nest start seanode",
+    "start_axenode:dev": "nest start seanode --watch",
+    "start_axenode:debug": "nest start seanode --debug --watch",
+    "start_axenode:prod": "node dist/apps/seanode/main",
     "start_msg:dev": "nest start message_bundle --watch",
     "start_msg:debug": "nest start message_bundle --debug --watch",
     "start_msg:prod": "node dist/apps/message_bundle/main",
